...
            )
        }
        Text(
            modifier = Modifier
                .fillMaxWidth()
                .wrapContentWidth(Alignment.CenterHorizontally)
                .testTag("percentValue"),
            style = MaterialTheme.typography.displaySmall,
            maxLines = 1,
            text = percentText,
            color = OrbitalBlue,
        )
        if (percentageMin is PercentageParam.Enable) {
...
