...
                            ),
                            color = MagneticGrey,
                        )
                    }
                    Text(
                        style = MaterialTheme.typography.displaySmall,
                        modifier = Modifier.testTag("qtyValue"),
                        maxLines = 1,
                        text = quantityText,
                        color = quantityColor,
                    )
                    if (minQuantity is QuantityParam.Enable) {
                        Text(
...
